feat: add tags example (#101)
* add tags example

* add format func
