# example/celler/docs/swagger/swagger.yaml
@@ -108,6 +108,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: List accounts
+      tags:
+      - accounts
     post:
       consumes:
       - application/json
@@ -144,6 +146,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: Add a account
+      tags:
+      - accounts
   /accounts/{id}:
     delete:
       consumes:
@@ -180,6 +184,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: Update a account
+      tags:
+      - accounts
     get:
       consumes:
       - application/json
@@ -214,6 +220,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: Show a account
+      tags:
+      - accounts
     patch:
       consumes:
       - application/json
@@ -255,6 +263,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: Update a account
+      tags:
+      - accounts
   /accounts/{id}/images:
     post:
       consumes:
@@ -295,6 +305,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: Upload account image
+      tags:
+      - accounts
   /admin/auth:
     post:
       consumes:
@@ -331,6 +343,9 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Auth admin
+      tags:
+      - accounts
+      - admin
   /bottles:
     get:
       consumes:
@@ -361,6 +376,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: List bottles
+      tags:
+      - bottles
   /bottles/{id}:
     get:
       consumes:
@@ -397,6 +414,8 @@ paths:
             $ref: '#/definitions/httputil.HTTPError'
             type: object
       summary: Show a bottle
+      tags:
+      - bottles
   /examples/attribute:
     get:
       consumes:
@@ -464,6 +483,8 @@ paths:
           schema:
             type: string
       summary: attribute example
+      tags:
+      - example
   /examples/calc:
     get:
       consumes:
@@ -500,6 +521,8 @@ paths:
           schema:
             type: string
       summary: calc example
+      tags:
+      - example
   /examples/groups/{group_id}/accounts/{account_id}:
     get:
       consumes:
@@ -536,6 +559,8 @@ paths:
           schema:
             type: string
       summary: path params example
+      tags:
+      - example
   /examples/header:
     get:
       consumes:
@@ -567,6 +592,8 @@ paths:
           schema:
             type: string
       summary: custome header example
+      tags:
+      - example
   /examples/ping:
     get:
       consumes:
@@ -592,6 +619,8 @@ paths:
           schema:
             type: string
       summary: ping example
+      tags:
+      - example
   /examples/securities:
     get:
       consumes:
@@ -628,6 +657,8 @@ paths:
         - admin
         - write
       summary: custome header example
+      tags:
+      - example
 securityDefinitions:
   ApiKeyAuth:
     in: header
